<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4333232"
    android:paddingLeft="50dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="543dp"
        android:layout_height="145dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:layout_marginBottom="364dp"
        android:text="@string/lorem"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="469dp"
        android:layout_marginRight="469dp"
        android:text="@string/biftek"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="372dp"
        android:layout_height="83dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="316dp"
        android:layout_marginRight="316dp"
        android:text="@string/loremkratki"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="509dp"
        android:layout_marginRight="509dp"
        android:layout_marginBottom="333dp"
        android:text="@string/preporukavina"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="599dp"
        android:layout_height="116dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="466dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:text="@string/vinoispod"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:layout_marginBottom="242dp"
        android:text="@string/cijena1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="514dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="216dp">
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="514dp"
        android:layout_height="wrap_content"
 />
    </FrameLayout>

</RelativeLayout>